# ros_reuleaux_ws

./: .gitignore  README.md
src/biped_s4/config/: new_robot_grasp_to_visual.rviz  robot_grasp_dof_to_visual.rviz
src/biped_s4/launch/: robot_state_publisher.launch
src/biped_s4/urdf/: biped_s4.urdf  biped_s4_left_arm.urdf  ikfastBiped.cpp
src/map_creator/: CMakeLists.txt
src/map_creator/include/map_creator/: ikfastBiped3.cpp  kinematics.h  mh5_ikfast.cpp  sphere_discretization.h
src/map_creator/maps/: biped_s4_186_0.05.h5  biped_s4_186_0.08.h5  biped_s4_186_0.08_2.h5  biped_s4_r0.05_reachability.h5  biped_s4_r0.08_reachability.h5
src/map_creator/src/: create_reachability_map.cpp  create_reachability_map_service.cpp  load_capability_map.cpp  load_reachability_map.cpp  sphere_discretization.cpp
